Fixed nav alignment...

--- a/css/new.css
+++ b/css/new.css
@@ -147,6 +147,8 @@ nav {
   /* min-height: 5rem; */
   display: flex;
   flex-wrap: nowrap;
+  justify-content: space-between;
+  padding: 0 1em;
   /* flex-direction: column; */
 }
 
@@ -190,5 +192,9 @@ MEDIA QUERIES
 @media (min-width: 37.5em) {
   .hero > div {
     margin: auto;
+  }
+
+  nav img {
+    margin: 0;
   }
 }
